<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Update Flyme Style</string>
    <string name="title_app">♡♡♡ Selamat Datang ♡♡♡</string>
	<string name="deskripsi_app"><div style="text-align: justify;">Ini Adalah proyek lanjutan dari <b>Flyme Style</b> sebelumnya, Karena <u>Aplikasi</u> yang pertama tidak saya clone jadi terpaksa harus membuatnya lagi dari awal, tapi tidak apa-apa bagi saya. Aplikasi ini juga berisi <b>Flyme Style</b> dari saya dan ada juga tambahan dari teman-teman yang lainnya.</div></string>
	<string name="title_page_00">Flyme UI 00</string>
	<string name="title_page_01">Flyme UI 01</string>
	<!-- 24-August-2020 -->
	<string name="title_page_02">Flyme UI 02</string>
	<string name="title_page_03">Flyme UI 03</string>
	<string name="title_page_04">Flyme UI 04</string>
	<string name="title_page_05">Flyme UI 05</string>
	<string name="title_page_06">Flyme UI 06</string>
	<string name="title_page_07">Flyme UI 07</string>
	<string name="title_page_08">Flyme UI 08</string>
	<string name="title_page_09">Flyme UI 09</string>
	<string name="title_page_10">Flyme UI 10</string>
	<!-- 29-Agustus-->
	<string name="title_cara_install">Cara Install</string>
	<string name="flyme_style_00">Flyme Style 00</string>
	<string name="flyme_style_01">Flyme Style 01</string>
	<string name="flyme_style_02">Flyme Style 02</string>
	<string name="flyme_style_03">Flyme Style 03</string>
	<string name="flyme_style_04">Flyme Style 04</string>
	<string name="flyme_style_05">Flyme Style 05</string>
	<!-- 02-September-2020 -->
	<string name="cara_install_flyme_ui">Untuk Memasang <b>Flyme StatusBar</b> Anda harus Memenuhi syarat, Apa syarat yang harus di penuhi?</string>
	
	
</resources>
