<menu 
	xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
		android:icon="@drawable/ic_launcher"
		android:showAsAction="ifRoom"
        android:id="@+id/kumpulan_flyme_00"
        android:title="@string/title_page_00"/>
	
	<!-- 24-August-2020 -->
	<item
		android:icon="@drawable/ic_launcher"
		android:showAsAction="ifRoom"
        android:id="@+id/kumpulan_flyme_01"
        android:title="@string/title_page_01"/>
	
	<!-- Penambahan Icon Menu Di ActionBar -->
	<item
        android:id="@+id/kumpulan_flyme_02"
        android:title="@string/title_page_02"/>
	
	<item
        android:id="@+id/kumpulan_flyme_03"
        android:title="@string/title_page_03"/>
	
	<item
        android:id="@+id/kumpulan_flyme_04"
        android:title="@string/title_page_04"/>
	
	<item
        android:id="@+id/kumpulan_flyme_05"
        android:title="@string/title_page_05"/>
	
	<item
        android:id="@+id/exit_app"
        android:title="Keluar"/>
    
</menu>
